# zero-bin

./: .env  .envrc.template  .gitignore  Cargo.toml  containers.nix  coordinator.Dockerfile  deps.nix  leader.Dockerfile  overlay.nix  pkgs.nix  shell.nix  worker.Dockerfile
.cargo/: config.toml
.github/workflows/: deploy.yml
coordinator/: Cargo.toml  README.md
coordinator/benchmark_out/: test.csv  test2.csv  testparallel.csv  testparallelgas.csv  testz.csv
coordinator/proofs_out/: test_10.json  test_11.json  test_12.json  test_13.json  test_14.json  test_15.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_7.json  test_8.json  test_9.json
coordinator/src/: benchmarking.rs  fetch.rs  input.rs  lib.rs  main.rs  manyprover.rs  proofout.rs  psm.rs  server.rs
deploy/helm/zero-bin/: values.yaml
gascalc/: Cargo.toml  README.md
gascalc/src/: main.rs
leader/: Cargo.toml
leader/src/: http.rs  init.rs  jerigon.rs  lib.rs  main.rs  stdio.rs
ops/src/: lib.rs
prover/: Cargo.toml
prover/src/: lib.rs
rpc/: Cargo.toml  geth_vs_ethereum.md
rpc/src/: init.rs  rpc.rs
verifier/src/: init.rs
worker/: Cargo.toml
worker/src/: init.rs  main.rs
