[package]
name = "coordinator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

# Local dependencies
ops = { path = "../ops" }
prover = { path = "../prover" }
rpc = { path = "../rpc" }
common = { path = "../common" }
leader = { path = "../leader" }

# 3rd parties
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
paladin-core = { workspace = true }
proof_gen = { workspace = true }
google-cloud-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4.21"
actix-web = "4.5.1"
actix-rt = "2.9.0"
env_logger = "0.11.3"
chrono = "0.4.38"

